<resources>
    <string name="app_name">Subway Route</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Parola:</string>
    <string name="hint_repeat_password">Repeta parola</string>
    <string name="btn_register">Inregistrare</string>
    <string name="hint_login">Logare</string>
    <string name="leave_comment">Lasa-ne un comentariu</string>
    <string name="mark">Da-ne o nota</string>
    <string name="from">Plecare din statia:</string>
    <string name="destination">Sosire in statia:</string>
    <string name="rb_yes">Da</string>
    <string name="rb_no">Nu</string>
    <string name="choose_type">Alege tipul de calatorie:</string>
    <string name="tv_shortest_route">Cauta ruta cea mai scurta</string>
    <string name="search">Cauta</string>
    <string name="trip_date">Data calatoriei:</string>
    <string name="lines">Magistralele circulate:</string>
    <string name="tv_m1">M1: Dristor-Pantelimon</string>
    <string name="tv_m2">M2: Berceni-Pipera</string>
    <string name="tv_m3">M3: Preciziei-Anghel Saligny</string>
    <string name="tv_m4">M4: Gara de Nord-Straulesti</string>
    <string name="info_s">Abonamente Elevi-Studenti</string>
    <string name="info_v">Abonamente Veterani Razboi</string>
    <string name="info_d">Abonamente Donatori</string>
    <string name="info_f">Abonamente Persoane cu Handicap</string>
    <string name="info_case_sp">Pentru abonamente speciale, sunt disponibile urmatoarele case:</string>
    <string name="case_pentru_abonamente_elev_student">Case pentru abonamente elev-student</string>
    <string name="err_mail">Introduceti email-ul!</string>
    <string name="err_pass">Parola gresita</string>
    <string name="info_creare_user">S-a creat utilizatorul. Va puteti conecta...</string>
    <string name="err_set_pass">Setati o parola de cel putin 7 caractere</string>
    <string name="err_confirm_pass">Repetati parola</string>
    <string name="err_from">Introduceti statia de plecare!</string>
    <string name="err_dest">Introduceti destinatia!</string>
    <string name="err_date">Data trebuie sa aiba formatul: dd.MM.yyyy</string>
    <string name="info_preluare_json">Se preia lista...</string>
    <string name="info_json_preluat">Lista statiilor preluata cu succes</string>
    <string name="sau_cauta_o_ruta_folosind_harti">Sau... cauta o ruta folosind Harti</string>
    <string name="nu_ai_cont_inregistreaza_te">Nu ai cont? Inregistreaza-te!</string>
    <string name="info_deconectare">Utilizatorul a fost deconectat</string>
    <string name="eventUpload">De aici se incarca imaginea de profil</string>
    <string name="aici_vor_fi_statiile_ce_alcatuiesc_ruta">Parcurge statiile pana la destinatie</string>
    <string name="todo">TODO</string>
    <string name="ai_oferit_aplicatiei_nota">Ai oferit aplicatiei nota:</string>
    <string name="username">Username:</string>
    <string name="username_damproject_ro">username@damproject.ro</string>
    <string name="mark_10">10/10</string>
    <string name="deconectare">Deconectare</string>
    <string name="cd">Case pentru abonamente donatori</string>
    <string name="ch">Case pentru abonamente persoane cu handicap</string>
    <string name="cv">Case pentru abonamente veterani razboi</string>
    <string name="errValidEmail">Introduceti o adresa de email valida!</string>
    <string name="errSamePass">Parolele nu coincid!</string>
    <string name="errOnStartSignIn">Utilizator deja autentificat!</string>
    <string name="errSameUser">Acest utilizator exista deja!</string>
    <string name="errAuth">Autentificare esuata!</string>
    <string name="errLogin">Conectare esuata!</string>
    <string name="vezi_parerea_celorlalti_utilizatori"><u>Vezi parerea celorlalti utilizatori</u></string>
    <string name="AparatoriiPatriei">Aparatorii Patriei</string>
    <string name="PiataSudului">Piata Sudului</string>
    <string name="ConstBr">Constantin Brancoveanu</string>
    <string name="Eroiirev">Eroii Revolutiei</string>
    <string name="PiataUn">Piata Unirii 2</string>
    <string name="univ">Universitate</string>
    <string name="piatrom">Piata Romana</string>
    <string name="piatavict">Piata Victoriei 2</string>
    <string name="aiat">Aviatorilor</string>
    <string name="aurica">Aurel Vlaicu</string>
    <string name="pipera">Pipera</string>
    <string name="cf">feedback</string>
    <string name="zero">0 stele</string>
    <string name="zeroc">0.5 stele</string>
    <string name="ost">o stea</string>
    <string name="osj">1.5 stele</string>
    <string name="dois">2 stele</string>
    <string name="doisj">2.5 stele</string>
    <string name="treis">3 stele</string>
    <string name="treisj">3.5 stele</string>
    <string name="patrus">4 stele</string>
    <string name="patrusj">4.5 stele</string>
    <string name="cincis">5 stele</string>
    <string name="feedbacksalvat">Feedback salvat</string>
    <string name="buc">Bucuresti</string>
    <string name="errsavef">Eroare la salvarea feedback-ului</string>
    <string name="savef">Feedback adaugat cu succes</string>
    <string name="cp">profile</string>
    <string name="icomm">Introduceti un comentariu!</string>
    <string name="cr">rute</string>
    <string name="secauta">Se cauta...</string>
    <string name="atinge_pin_ul">Atinge pin-ul</string>

    <string-array name="search_route_type">
        <item>Dus</item>
        <item>Intors</item>
        <item>Dus-Intors</item>
    </string-array>
</resources>
